force-app/main/default/objects/Booking__c/fields/Available_Seat__c.field-meta.xml
<CustomField>
    <fullName>Available_Seat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Available Seat</label>
    <referenceTo>Available_Seat__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>