force-app/main/default/objects/Booking__c/fields/ShowTime__c.field-meta.xml
<CustomField>
    <fullName>ShowTime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ShowTime</label>
    <referenceTo>ShowTime__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>